--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
 }
 
 html,
-body
-{
+body {
     overflow-x: hidden;
 }
 
-.webgl
-{
+.webgl {
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#e4e0ba, #f7d9aa);
 }
